<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/padding">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/TextAppearance.ShoeShop.Title"
            android:text="@string/welcome_title_text"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="32dp"
            style="@style/TextAppearance.ShoeShop.Body"
            android:text="@string/welcome_body_text" />

        <Button
            style="@style/Widget.ShoeShop.Button"
            android:id="@+id/btn_welcome_continue"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_continue" />

    </LinearLayout>
    </ScrollView>
</layout>