<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".fragments.InstructionFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/padding">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/instruction_title_text"
                style="@style/TitleStyle"/>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/StandardTextStyle"
                android:text="@string/instruction_body_text"
                />

            <Button
                android:id="@+id/btn_instruction_finish"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/finish_button_text" />
        </LinearLayout>


    </ScrollView>
</layout>